Use predictable map in test
UnrecognizedAttributesSerializerTest fails sporadically due to
Map's order instability. Use ImmutableMap, which guarantees iteration
order.

Change-Id: Idb0a42e72e82975799ace19c56619d6c87364100
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>